--- a/landing_page/Style/style.css
+++ b/landing_page/Style/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #12173a;
 }
 #loader {
-  height: 100%;
+  height: auto;
   width: 100%;
   background-color: #12173a;
   position: fixed;
